--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -49,6 +49,16 @@ section {
     margin: 30px 0;
 }
 
+.left-section-lead {
+    margin: 15px 0;
+    float:left;
+    width:30%;
+}
+
+.right-section-lead {
+    margin: 30px 0 30px 60%;
+}
+
 .section-paragraph {
     margin: 30px 0;
 }
