--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -77,3 +77,17 @@ footer {
         font-size: 2em;
     }
 }
+
+.img-titre-test {
+    width: 20%;
+    height: 20%;
+    margin-right: 150px;
+    margin-top: -30px;
+}
+
+.img-toefl {
+    width: 15%;
+    height: 15%;
+    margin-right: 150px;
+    margin-top: -30px;
+}
