--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -18,17 +18,17 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
+	background: black no-repeat center center scroll;
     padding: 100px 0;
 }
 
 .image-bg-etudiant-height {
-    background: url('https://pixabay.com/static/uploads/photo/2015/09/09/22/03/keyboard-933680_960_720.jpg') no-repeat center center scroll;
+    background: black no-repeat center center scroll;
     padding: 100px 0;
 }
 
 .image-bg-fixed-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
+	background: black no-repeat center center scroll;
     height: 450px;
 }
 
@@ -90,4 +90,9 @@ footer {
     height: 15%;
     margin-right: 150px;
     margin-top: -30px;
+}
+
+.titre-site {
+    font-size: 4.5em;
+    color: white;
 }
