--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -96,3 +96,14 @@ footer {
     font-size: 4.5em;
     color: white;
 }
+
+td, th {
+    height: 50px;
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
